Fixed html validator errors

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         </a>
         <article class="d-flex border-bottom opinion-article">
           <div class="justify-content-start">
-            <img class="opinin_img "src="https://d.newsweek.com/en/full/1577421/hank-gilman.png" alt="more stories">
+            <img class="opinin_img" src="https://d.newsweek.com/en/full/1577421/hank-gilman.png" alt="more stories">
           </div>
           <div class="d-flex flex-column ml-3">
             <div>
@@ -435,7 +435,7 @@
         </a>
         <article class="more-stories-article d-flex border-bottom">
           <div class=" justify-content-end">
-            <img class="img-fluid more-stories_img "src="https://d.newsweek.com/en/full/1581093/coronavirus-america-recoveries-40000-people.jpg" alt="more stories">
+            <img class="img-fluid more-stories_img" src="https://d.newsweek.com/en/full/1581093/coronavirus-america-recoveries-40000-people.jpg" alt="more stories">
           </div>
           <div class="d-flex flex-column ml-3">
             <div>
@@ -456,49 +456,7 @@
         </article>
         <article class="more-stories-article d-flex border-bottom">
           <div class=" justify-content-end">
-            <img class="img-fluid more-stories_img "src = "https://d.newsweek.com/en/full/1581093/coronavirus-america-recoveries-40000-people.jpg" alt="more stories">
-          </div>
-          <div class="d-flex flex-column ml-3">
-            <div>
-              <a href="#">
-                <h4 class=" more-stories-title">
-                  Restauranteur Delivers Oranges to Hospital Workers Amid Coronavirus Crisis
-                </h4>
-              </a>
-            </div>  
-            <div>
-              <p class=" more-stories-paragraph text-body">
-                "We all have to help each other," Matthew Fermin, 
-                owner of East Harlem restaurant Santiago's 
-                Beer Garden, told Newsweek.
-              </p>
-            </div>
-          </div>
-        </article>
-        <article class="more-stories-article d-flex border-bottom">
-          <div class=" justify-content-end">
-            <img class="img-fluid more-stories_img "src= "https://d.newsweek.com/en/full/1581093/coronavirus-america-recoveries-40000-people.jpg" alt="more stories">
-          </div>
-          <div class="d-flex flex-column ml-3">
-            <div>
-              <a href="#">
-                <h4 class=" more-stories-title">
-                  Restauranteur Delivers Oranges to Hospital Workers Amid Coronavirus Crisis
-                </h4>
-              </a>
-            </div>  
-            <div>
-              <p class=" more-stories-paragraph text-body">
-                "We all have to help each other," Matthew Fermin, 
-                owner of East Harlem restaurant Santiago's 
-                Beer Garden, told Newsweek.
-              </p>
-            </div>
-          </div>
-        </article>
-        <article class="more-stories-article d-flex border-bottom">
-          <div class=" justify-content-end">
-            <img class="img-fluid more-stories_img "src= "https://d.newsweek.com/en/full/1581093/coronavirus-america-recoveries-40000-people.jpg" alt="more stories">
+            <img class="img-fluid more-stories_img" src = "https://d.newsweek.com/en/full/1581093/coronavirus-america-recoveries-40000-people.jpg" alt="more stories">
           </div>
           <div class="d-flex flex-column ml-3">
             <div>
@@ -603,7 +561,49 @@
         </article>
         <article class="more-stories-article d-flex border-bottom">
           <div class=" justify-content-end">
-            <img class="img-fluid more-stories_img "src="https://d.newsweek.com/en/full/1581093/coronavirus-america-recoveries-40000-people.jpg" alt="more stories">
+            <img class="img-fluid more-stories_img" src= "https://d.newsweek.com/en/full/1581093/coronavirus-america-recoveries-40000-people.jpg" alt="more stories">
+          </div>
+          <div class="d-flex flex-column ml-3">
+            <div>
+              <a href="#">
+                <h4 class=" more-stories-title">
+                  Restauranteur Delivers Oranges to Hospital Workers Amid Coronavirus Crisis
+                </h4>
+              </a>
+            </div>  
+            <div>
+              <p class=" more-stories-paragraph text-body">
+                "We all have to help each other," Matthew Fermin, 
+                owner of East Harlem restaurant Santiago's 
+                Beer Garden, told Newsweek.
+              </p>
+            </div>
+          </div>
+        </article>
+        <article class="more-stories-article d-flex border-bottom">
+          <div class=" justify-content-end">
+            <img class="img-fluid more-stories_img" src= "https://d.newsweek.com/en/full/1581093/coronavirus-america-recoveries-40000-people.jpg" alt="more stories">
+          </div>
+          <div class="d-flex flex-column ml-3">
+            <div>
+              <a href="#">
+                <h4 class=" more-stories-title">
+                  Restauranteur Delivers Oranges to Hospital Workers Amid Coronavirus Crisis
+                </h4>
+              </a>
+            </div>  
+            <div>
+              <p class=" more-stories-paragraph text-body">
+                "We all have to help each other," Matthew Fermin, 
+                owner of East Harlem restaurant Santiago's 
+                Beer Garden, told Newsweek.
+              </p>
+            </div>
+          </div>
+        </article>
+        <article class="more-stories-article d-flex border-bottom">
+          <div class=" justify-content-end">
+            <img class="img-fluid more-stories_img" src="https://d.newsweek.com/en/full/1581093/coronavirus-america-recoveries-40000-people.jpg" alt="more stories">
           </div>
           <div class="d-flex flex-column ml-3">
             <div>
@@ -1518,9 +1518,9 @@
                 <span class="logo-icon-newsletter">
                   <img class="newsweek-icon" src="./new_icon.PNG" alt="newsweek-icon">
                 </span>
-                  <h1 class="newsletter-title">
+                  <h2 class="newsletter-title">
                     SIGN UP FOR OUR NEWSLETTER
-                  </h1>
+                  </h2>
               </div>
                 <button type="button" class="btn sign-up-btn">Sign Up ></button>
               <div>
@@ -1603,13 +1603,13 @@
                 <span class="logo-icon-newsletter">
                   <img class="newsweek-icon" src="./new_icon.PNG" alt="newsweek-icon">
                 </span>
-                  <h1 class="newsletter-title">
+                  <h2 class="newsletter-title">
                     SIGN UP FOR OUR NEWSLETTER
-                  </h1>
+                  </h2>
               </div>
-              <a href="#">
-                <button type="button" class="btn sign-up-btn">Sign Up ></button>
-              </a>
+                <div>
+                  <button type="button" class="btn sign-up-btn">Sign Up ></button>
+                </div>
               <div>
                 <a class="font-roboto pu-link" href="#">Update your preferences»</a>
               </div>
@@ -1666,7 +1666,7 @@
       <div class="row second_section_wrapper pb-5 border-bottom">
         <section class="mag-wrapper">
           <div class="d-flex align-items-center justify-content-center border-bottom font-roboto w-100 py-3 mag-heading w-100">
-            <img class="newsweek-icon" src="/new_icon.PNG" alt="newsweek-logo">
+            <img class="newsweek-icon" src="./new_icon.PNG" alt="newsweek-logo">
             <h2 class=" mag-title px-2">IN THE MAGAZINE</h2>
           </div>
 
@@ -1831,7 +1831,7 @@
           <div class="editor'spick_container">
             <section class="in_the_magazine wrapper_1">
               <div class="d-flex align-items-center justify-content-center border-bottom font-roboto w-100 py-3 mag-heading w-100">
-                <img class="newsweek-icon" src="/new_icon.PNG" alt="newsweek-logo">
+                <img class="newsweek-icon" src="./new_icon.PNG" alt="newsweek-logo">
                 <h2 class=" mag-title px-2">EDITOR'S PICK</h2>
               </div>
                 <div class="row">
@@ -2004,7 +2004,7 @@
 
       <div class="row">
         <div class=" row d-flex align-items-center justify-content-start font-roboto signup-call py-3">
-          <h1 class="us px-2 mag_link font-weight-bold">U.S.</h1>
+          <h2 class="us px-2 mag_link font-weight-bold">U.S.</h2>
         </div>
         <div class="row">
           <article class="all_features_articles sections_all_featured_articles sections_all_featured_articles_big card border-0 w-100 col-sm-12 col-md-4 align-self-start">
@@ -2016,11 +2016,9 @@
               </div>
               <div>
               <a href="#" class="link-underline">
-                <a href="#">
-                  <h2 class="mag_link2 article-title pt-2 pl-0">
-                    COVID-19 Linked to Changes to the Brains of Some Patients
-                  </h2>
-                </a>
+                <h2 class="mag_link2 article-title pt-2 pl-0">
+                  COVID-19 Linked to Changes to the Brains of Some Patients
+                </h2>
               </a>
               <div class="card-text font-weight-normal">
 
@@ -2036,11 +2034,9 @@
               </div>
               <div>
               <a href="#" class="link-underline">
-                <a href="#">
-                  <h2 class="mag_link2 article-title pt-2 pl-0">
-                    COVID-19 Linked to Changes to the Brains of Some Patients
-                  </h2>
-                </a>
+                <h2 class="mag_link2 article-title pt-2 pl-0">
+                  COVID-19 Linked to Changes to the Brains of Some Patients
+                </h2>
               </a>
               <div class="card-text font-weight-normal">
 
@@ -2097,13 +2093,14 @@
               </div>
             </article>
           </div>
+        </div>
       </div>
   
       <div class="row fourth-section-wrapper border-bottom">
         <div class=" col-md-12 col-lg-8 sub-wrapper">
           <section>
             <div class=" col-lg-8 d-flex align-items-center justify-content-start font-roboto sub-wrapper2">
-              <h1 class="font-weight-bold sub-title">SUBSCRIBE</h1>
+              <h2 class="font-weight-bold sub-title">SUBSCRIBE</h2>
             </div>
             <article class="w-100 sub-container">
               <div class="d-flex">
@@ -2115,9 +2112,7 @@
                   <p class="py-2">All Access + Weekly Delivery.
                     Choose A Membership That's Perfect for You!</p>
                   <div class="py-2">
-                    <a class="top_navbar_link" href="#">
                       <button type="button" class="subscribe_btn">SUBSCRIBE ></button>
-                    </a>
                   </div>
                 </div>
               </div>
@@ -2126,7 +2121,7 @@
         </div>
         <div class="col-md-12 col-lg-4 signup-wrapper">
           <div class=" col-lg-4 d-flex align-items-center justify-content-start font-roboto">
-            <h1 class="font-weight-bold sub-title">NEWSLETTER</h1>
+            <h2 class="font-weight-bold sub-title">NEWSLETTER</h2>
           </div>
           <article class="w-100  sign-up-container">
             <div class="d-flex">
@@ -2138,11 +2133,9 @@
                 <p class="py-2">See why nearly a quarter of a million subscribers
                    begin their day with the Starting 5.
                 </p>
-                <div class="py-2">
-                  <a class="top_navbar_link" href="#">
+                  <div class="py-2">
                     <button type="button" class="subscribe_btn">SIGN UP ></button>
-                  </a>
-                </div>
+                  </div>                
               </div>
             </div>
           </article>
@@ -2156,7 +2149,7 @@
       <div class="d-flex flex-md-row align-items-md-end justify-content-between pb-3 pt-3 border-bottom">
         <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end">
           <div class="pl-3">
-            <img class="footer-logo" src="/footer-logo.PNG" alt="footer Logo">
+            <img class="footer-logo" src="./footer-logo.PNG" alt="footer Logo">
           </div>
           <div>
             <small class="footer-copyright text-muted text-uppercase">© 2020 Newsweek</small>
