Fixed lint errors

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
         </div> 
         <div class="header_left col d-flex flex-lg-column align-items-lg-start ">
           <div class="row align-items-center row justify-content-start">
-            <a href="#" class="d-none d-sm-block">
+            <a href="#" class="d-none d-sm-block text-decoration-none">
               <div class="d-flex justify-content-between">
-                <i class="fas fa-sun"></i> 25°
-                <span class="d-none d-md-inline-block">Kampala District, UG ></span>
+                <i class="fas fa-sun text-white"></i> 
+                  <span class="text-white"> 25°</span>
+                <span class="d-none d-md-inline-block text-white">Kampala District, UG ></span>
               </div>
             </a>
           </div>
@@ -57,10 +58,10 @@
         </div>   
         <div class=" d-flex align-items-center">
           <div>
-            <a class="text-white font-weight-bold pr-3" href="#">SIGN IN</a>
+            <a class="text-white font-weight-bold pr-3 text-decoration-none" href="#">SIGN IN</a>
           </div>
           <div>
-              <button type="button" class="header-subscribe_btn">SUBSCRIBE ></button>
+              <button type="button" class="header-subscribe_btn text-decoration-none">SUBSCRIBE ></button>
           </div>
           <span class="d-block d-lg-none menu-icon d-flex justify-content-center align-items-center">
             <i class="fas fa-bars"></i>
